colocando e formatando bordar na class produtos li

--- a/produtos.css
+++ b/produtos.css
@@ -39,6 +39,8 @@ nav  a{
     margin: 0 1.5%;
     padding: 30px 20px;
     box-sizing: border-box; /* faz o width ficar definitivo na pagina */
+    border: #000 2px solid;
+    border-radius: 12px;
 }
 .produtos h2{
     font-size: 30px;
