--- a/produtos.css
+++ b/produtos.css
@@ -72,3 +72,9 @@ nav a:hover{
     font-weight: bold;
     margin: 10px 0 0;
 }
+
+footer{
+    text-align: center;
+    background:black;
+    padding: 40px 0;
+}
