finalizando formatação do footer

--- a/produtos.css
+++ b/produtos.css
@@ -78,3 +78,10 @@ footer{
     background:black;
     padding: 40px 0;
 }
+
+
+.Copyright{
+ color: #ffff;
+ font-size: 13px;
+ margin-top: 20px;
+}
