--- a/style.css
+++ b/style.css
@@ -1,3 +1,37 @@
+header{
+    background: #bbbb;
+    padding: 20px 0;
+}
+.caixa{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+}
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav  a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+
+}
+
+nav a:hover{
+    color: #c78c19;
+    text-decoration: none;
+    
+}
 #banner {
 	width:100%;
 }
@@ -35,8 +69,7 @@ em strong {
 	background: #FFFFFF;
 	padding: 20px;
 }
-
-ul {
+#itens {
 	display: inline-block;
 	vertical-align: top;
 	width: 20%;
