Formatando footer pagina Home

--- a/style.css
+++ b/style.css
@@ -79,3 +79,16 @@ em strong {
 .imagembeneficios {
 	width: 50%;
 }
+
+footer{
+    text-align: center;
+    background:black;
+    padding: 40px 0;
+}
+
+
+.Copyright{
+ color: #ffff;
+ font-size: 13px;
+ margin-top: 20px;
+}
