Formatação de btn enviar

--- a/contato.css
+++ b/contato.css
@@ -73,7 +73,7 @@ form label, form legend{
 }
 .enviar:hover{
     background-color: darkorange;
-    transform: scale(1.2) rotate(360deg);
+    transform: scale(1.2) ;
 
 }
 /* Fim conteudo  */
