--- a/style.css
+++ b/style.css
@@ -163,6 +163,12 @@ td, th {
 	margin: 0 0 1em;
 	clear: left;
 }
+.titulo-principal::first-letter{
+	font-weight: bold;
+}
+p::first-line{
+	font-style: italic;
+}
 .principal{
 	padding: 3em 0 ;
 	background: #FEFEFE;
