--- a/style.css
+++ b/style.css
@@ -166,6 +166,12 @@ td, th {
 .titulo-principal::first-letter{
 	font-weight: bold;
 }
+.titulo-principal::before{
+ content: "[";
+}
+.titulo-principal::after{
+content: "]";
+}
 p::first-line{
 	font-style: italic;
 }
