--- a/style.css
+++ b/style.css
@@ -167,10 +167,10 @@ td, th {
 	font-weight: bold;
 }
 .titulo-principal::before{
- content: " 💈  ";
+ content: " 💈 -  ";
 }
 .titulo-principal::after{
-content: "  💈 ";
+content: " - 💈 ";
 } 
 .itens::before{
 	content: "★ ";
