--- a/style.css
+++ b/style.css
@@ -96,7 +96,18 @@ footer {
 /* main {
 	
 } */
-
+main > p {
+	background-color: red;
+}
+img + p {
+	background-color: blue;
+}
+img ~ p {
+	background-color: yellow;
+}
+.principal p:not(#missao){
+	background-color: orange;
+}
 form {
 	margin: 40px 0;
 }
