começo de estudo em casa

--- a/style.css
+++ b/style.css
@@ -163,6 +163,21 @@ td, th {
 	margin: 0 0 1em;
 	clear: left;
 }
+.titulo-principal::first-letter{
+	font-weight: bold;
+}
+.titulo-principal::before{
+ content: " 💈 -  ";
+}
+.titulo-principal::after{
+content: " - 💈 ";
+} 
+.itens::before{
+	content: "★ ";
+}
+p::first-line{
+	font-style: italic;
+}
 .principal{
 	padding: 3em 0 ;
 	background: #FEFEFE;
