colocando comentarios com cada diferença de pseudo avançado

--- a/avancado.css
+++ b/avancado.css
@@ -1,3 +1,8 @@
+/* Comentarios */
+/* seletor de herança x y */
+/* seletor pai e filho x > y */
+/* seletor adjacente x + y */
+
 div{
     width: 90%;
     margin: 0 auto;
