--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ td, th {
 	font-size: 2em;
 	margin: 0 0 1em;
 	clear: left;
+	color: rgba(0, 0, 0,0.3);
 }
 .titulo-principal::first-letter{
 	font-weight: bold;
@@ -237,6 +238,12 @@ p::first-line{
 }
 .imagembeneficios {
 	width: 60%;
+	opacity: 1;
+
+}
+.imagembeneficios:hover{
+	opacity: 0.3;
+	transition: 400ms;
 }
 
 .video{
