adicionando sombras em texto e em box

--- a/style.css
+++ b/style.css
@@ -162,7 +162,8 @@ td, th {
 	font-size: 2em;
 	margin: 0 0 1em;
 	clear: left;
-	color: rgba(0, 0, 0,0.3);
+	/*text-shadow: 2px 2px 2px #000 ; sombra em texto*/
+
 }
 .titulo-principal::first-letter{
 	font-weight: bold;
@@ -220,6 +221,7 @@ p::first-line{
 .beneficios{
 	padding: 3em 0;
 	background: #888888;
+	/*box-shadow: 10px 10px rgb(0, 0 ,0 );sombra para box*/
 }
 .conteudo-beneficios{
 	width: 640px;
@@ -239,6 +241,7 @@ p::first-line{
 .imagembeneficios {
 	width: 60%;
 	opacity: 1;
+	box-shadow: 10px 10px 0 #000;
 
 }
 .imagembeneficios:hover{
