--- a/style.css
+++ b/style.css
@@ -253,3 +253,9 @@ p::first-line{
 	width: 560px;
 	margin: 2em auto;
 }
+
+@media screen and (max-width:480px){
+	body{
+		background-color: red;
+	}
+}
